--- a/src/style/style.css
+++ b/src/style/style.css
@@ -10,6 +10,15 @@ body {
     background-color: #f5f5f5;
 }
 
+/* Navbar */
+.navbar {
+    box-shadow: 3px 3px 3px darkgrey;
+}
+
+.navbar .active-tab {
+    color: red !important;
+}
+
 /* Lockers section */
 .show-lockers a {
     text-decoration: none;
